kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: tech2-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tech2-app

  template:
    metadata:
      labels:
        app: tech2-app

    spec:
      containers:
        - name: tech2-app
          image: 701559402152.dkr.ecr.us-east-1.amazonaws.com/tech2-app:latest

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
