kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech2-app-service
spec:
  selector:
    app: tech2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

#https://kubernetes.io/docs/concepts/services-networking/service/?utm_source=chatgpt.com
